--- a/src/index.sass
+++ b/src/index.sass
@@ -8,7 +8,7 @@ $margin: 40px
 $calendar-height: 300px
 $news-height: 400px
 
-$weather-width: 480px
+$weather-width: 500px
 $other-width: 550px
 
 $padding: 30px
@@ -28,6 +28,17 @@ $input-weight: 300
   font-family: "Open Sans", Helvetica, sans-serif
   box-sizing: border-box
   line-height: 1
+
+  &::-webkit-scrollbar
+    width: 10px
+
+  &::-webkit-scrollbar-track
+    background: transparent
+
+  &::-webkit-scrollbar-thumb
+    border-radius: 5px
+    opacity: 0.5
+
 
 html, body
     height: 100%
@@ -71,7 +82,7 @@ div.toggle
 div.module
   border-radius: $rounded
   padding: $padding
-  overflow-y: scroll
+  overflow-y: auto
 
 div.weather
   grid-row: span 2
